--- a/app/wallet-api/src/main/resources/application.yaml
+++ b/app/wallet-api/src/main/resources/application.yaml
@@ -1,3 +1,14 @@
 spring:
   application:
     name: wallet
+  flyway:
+    baselineOnMigrate: true
+    locations: classpath:db/migration
+    enabled: true
+  jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+  datasource:
+    url: jdbc:postgresql://localhost:5432/postgres
+    username: postgres
+    password: postgres
+
